--- a/DE NEW/form/style.css
+++ b/DE NEW/form/style.css
@@ -36,7 +36,7 @@ body {
   /* color: #5851e3; */
   background-color: #fff4;
   padding: 0.8rem 1rem;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
 }
 
 .form-box form {
@@ -48,17 +48,18 @@ input {
   padding: 18px 16px;
   border: none;
   outline: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   /* background-color: #a3a3a331; */
   background-color: #fffb;
-  color: #b1b2c0;
+  color: #0009;
   font-weight: 600;
   font-size: 16px;
   margin: 12px 0;
 }
 
-input:hover{
+input:hover {
   background-color: #fff9;
+  color: #0008;
 }
 
 input[type="text"] {
@@ -70,18 +71,39 @@ a {
   font-size: 15px;
 }
 
-input[type="button"] {
+/* input[type="button"] {
   margin-block: 24px;
-  /* background-color: #5851e3; */
+  background-color: #5851e3;
   background-color: #3308cf8f;
   color: #bcbdcc;
   font-size: 22px;
   border-radius: 8px;
   cursor: pointer;
   transition: 0.4s;
-}
-input[type="button"]:hover {
+} */
+#signinBtn:hover {
   background-color: #020270b5;
+}
+
+#signinBtn {
+  /* background-color: #5851e3; */
+  background-color: #3308cf8f;
+  font-size: 22px;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 13px 20px;
+}
+
+#signinBtn a {
+  font-size: 24px;
+  color: #fff9;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .links {
@@ -95,7 +117,9 @@ input[type="button"]:hover {
 }
 .signup {
   text-align: center;
-  margin-block: 20px;
+  margin-block: 5px;
+  margin-bottom: -15px;
+  margin-top: 20px;
 }
 
 .signup a {
